--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -8,7 +8,7 @@
  * Cascading deletes and saves, configurable per collection
  * Limited Linq support for finding
  * Basic UnitOfWork capability for session and transaction management
- * Repository<T> base class
+ * Repository&lt;T&gt; base class
  * Database migration feature -- tracks changes and applies updates (forward only)
 
 = Configuration =
