--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -8,7 +8,7 @@
  * Cascading deletes and saves, configurable per collection
  * Limited Linq support for finding
  * Basic UnitOfWork capability for session and transaction management
- * Repository&lt;T&gt; base class
+ * {{{Repository<T>}}} base class
  * Database migration feature -- tracks changes and applies updates (forward only)
 
 = Configuration =
@@ -39,6 +39,8 @@ DatabaseMigrator.Execute();
 
 = Usage =
 
+== Get & Save ==
+
 Here we will fetch a forum, change the title, remove a post, and add a post then save the forum.  The Posts collection will be loaded lazily, and the adds/deletes will be cascaded when the forum is saved.  A connection will be opened and closed, and the whole thing will be wrapped in a transaction.
 
 {{{
@@ -52,6 +54,10 @@ using (UnitOfWork.Start)
    forumRepository.Save(forum);
 }
 }}}
+
+== Find ==
+
+UNDER CONSTRUCTION
 
 = Priority To Add =
 
