Edited wiki page through web user interface.

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -35,8 +35,10 @@ DomainMap.Configure
         .Property(x => x.Body)
         .BelongsTo(x => x.Poster, "PosterId")
     );
-UnitOfWork.Start();
-DatabaseMigrator.Execute();
+using (UnitOfWork.Start())
+{
+    DatabaseMigrator.Execute();
+}
 }}}
 
 = Usage =
