--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -45,7 +45,7 @@ using (UnitOfWork.Start())
 
 == Get & Save ==
 
-Here we will fetch a forum, change the title, remove a post, and add a post then save the forum.  The Posts collection will be loaded lazily.  The adds/deletes to Posts will be cascaded when the forum is saved.  A connection will be opened and closed, and the whole thing will be wrapped in a transaction.
+Here we will fetch a forum, change its title, remove a post, and add a post then save the forum.  The Posts collection will be loaded lazily.  The adds/deletes to Posts will be cascaded when the forum is saved.  A connection will be opened and closed, and the whole thing will be wrapped in a transaction.
 
 {{{
 using (UnitOfWork.Start)
