--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -1,7 +1,7 @@
 = Features =
 
  * Mapping via fluent interface (no auto mapping or attibute based mapping, but could be added)
- * Entities inherit from IEitity interface which exposes one property: int Id
+ * Entities inherit from IEitity interface which exposes three properties: int Id, bool IsTransiten, void SetId(int id)
  * Automatic loading of collections, lazy or eager, configurable per collection
  * Cascading deletes and saves, configurable per collection
  * Filtered collection mapping
