--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -92,7 +92,7 @@ UNDER CONSTRUCTION
  * Automated tests.  Catnap started as an experimental project that has evolved into something useful.  While it was developed with loose coupling and testability in mind, TDD/BDD was not used.  Getting the code under test will be necessary to allow for change and growth
    * Unit tests, lots of unit tests
    * More integration tests
- * Session cache. Currently there is no caching of fetched entities, which creates a performance problem, specifically for for cascading.  Cascading currently must retrieve the entire persisted collection in order to synchronize changes.  Therefore, cascading is currently only appropriate for collections of a small size.
+ * Session cache. Currently there is no caching of fetched entities.  This creates a performance problem, specifically for cascading.  To cascade we must retrieve the entire persisted collection to be able to synchronize changes.  Therefore, cascading is currently only appropriate for collections of a small size.
  * ...
 
 UNDER CONSTRUCTION
