--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -93,6 +93,8 @@ UNDER CONSTRUCTION
    * Unit tests, lots of unit tests
    * More integration tests
  * Session cache. Currently there is no caching of fetched entities.  This creates a performance problem, specifically for cascading.  To cascade we must retrieve the entire persisted collection to be able to synchronize changes.  Therefore, cascading is currently only appropriate for collections of a small size.
+ * Lazy loading of BelongsTo properties
+ * If possible introduce IoC.  Most IoC containers won't work on MonoTouch.  Look into [http://funq.codeplex.com/ Funq] and [http://docs.codehaus.org/display/PICO/Home PicoContainer.NET]
  * ...
 
 UNDER CONSTRUCTION
