Edited wiki page Introduction through web user interface.

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -165,7 +165,7 @@ public class when_creating_a_complex_condition
 {
     static Criteria target;
 
-    private Because of = () =>
+    Because of = () =>
     {
         DomainMap.Configure(new EntityMap<Person>().Property(x => x.FirstName));
         target = new Criteria
